[package]
name = "wintendo-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {version="0.7.0", features = []}


[dependencies.windows]
version = "0.30.0"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
]
